--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
   <body>
     <div class="container">
-      <%= render 'layouts/flash' %>
+      <%= render 'layouts/flash_messages' %>
 
       <%= yield %>
     </div>
